--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,7 +14,25 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MyCostSheetsViewController" customModule="Cost_Track" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="My Cost Sheets" id="25B-TP-Vt6"/>
+                    <navigationItem key="navigationItem" title="My Cost Sheets" id="25B-TP-Vt6">
+                        <barButtonItem key="leftBarButtonItem" title="Add" id="99u-Dh-FRo">
+                            <connections>
+                                <action selector="addNewCostSheetButtonPressed:" destination="BYZ-38-t0r" id="Zaq-8d-bWS"/>
+                            </connections>
+                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Set" id="E7o-6X-8ta">
+                                <connections>
+                                    <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" id="21r-Vn-u2P"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Sear" id="ajH-sw-SPK">
+                                <connections>
+                                    <action selector="searchButtonPressed:" destination="BYZ-38-t0r" id="KQs-Zn-sZ1"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
