--- a/Cost Track/Cost Track/Views/XIBs/CostSheetViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetViewController.xib
@@ -4,8 +4,10 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -71,15 +73,34 @@
                         <constraint firstItem="Cyq-5b-3vG" firstAttribute="leading" secondItem="29e-PI-poX" secondAttribute="trailing" id="wf9-fd-lEd"/>
                     </constraints>
                 </view>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yZT-RX-V9n">
+                    <rect key="frame" x="15" y="159" width="262.5" height="29"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="28" id="ixv-2s-DZC"/>
+                    </constraints>
+                    <segments>
+                        <segment title="Date"/>
+                        <segment title="Category"/>
+                        <segment title="Place"/>
+                    </segments>
+                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <action selector="classificationSegmentedControlValueChanged:" destination="-1" eventType="valueChanged" id="xcm-7n-9AR"/>
+                    </connections>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="yZT-RX-V9n" firstAttribute="top" secondItem="fYt-cV-xoQ" secondAttribute="bottom" constant="15" id="6vn-C2-LNf"/>
+                <constraint firstItem="yZT-RX-V9n" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="DoO-3Y-PHB"/>
+                <constraint firstItem="yZT-RX-V9n" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.7" id="EN4-jC-oqB"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="fYt-cV-xoQ" secondAttribute="top" id="Rpp-vw-rD3"/>
                 <constraint firstItem="fYt-cV-xoQ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="aDK-OC-RBF"/>
                 <constraint firstItem="fYt-cV-xoQ" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="wd7-lo-R3m"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
     </objects>
 </document>
