--- a/Cost Track/Cost Track/Views/XIBs/CostSheetViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetViewController.xib
@@ -14,6 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CostSheetViewController" customModule="Cost_Track" customModuleProvider="target">
             <connections>
+                <outlet property="transactionsTableView" destination="WW2-0P-2xE" id="kGc-cb-Pps"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -88,14 +89,25 @@
                         <action selector="classificationSegmentedControlValueChanged:" destination="-1" eventType="valueChanged" id="xcm-7n-9AR"/>
                     </connections>
                 </segmentedControl>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WW2-0P-2xE">
+                    <rect key="frame" x="0.0" y="202" width="375" height="465"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="c6C-CJ-Yas"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="WW2-0P-2xE" firstAttribute="top" secondItem="yZT-RX-V9n" secondAttribute="bottom" constant="15" id="5CG-hs-CZ1"/>
+                <constraint firstItem="WW2-0P-2xE" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="5Zr-O7-S7A"/>
                 <constraint firstItem="yZT-RX-V9n" firstAttribute="top" secondItem="fYt-cV-xoQ" secondAttribute="bottom" constant="15" id="6vn-C2-LNf"/>
                 <constraint firstItem="yZT-RX-V9n" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="DoO-3Y-PHB"/>
                 <constraint firstItem="yZT-RX-V9n" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.7" id="EN4-jC-oqB"/>
+                <constraint firstItem="WW2-0P-2xE" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="QJc-co-dU4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="fYt-cV-xoQ" secondAttribute="top" id="Rpp-vw-rD3"/>
                 <constraint firstItem="fYt-cV-xoQ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="aDK-OC-RBF"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="WW2-0P-2xE" secondAttribute="bottom" id="reK-8j-5iz"/>
                 <constraint firstItem="fYt-cV-xoQ" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="wd7-lo-R3m"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
