--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
             </objects>
             <point key="canvasLocation" x="514" y="110"/>
         </scene>
-        <!--New Cost Sheet View Controller-->
+        <!--New Cost Sheet-->
         <scene sceneID="NWz-sH-cPw">
             <objects>
                 <viewController id="Zj1-Q9-6XZ" customClass="NewCostSheetViewController" customModule="Cost_Track" customModuleProvider="target" sceneMemberID="viewController">
@@ -66,6 +66,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KXR-Pp-7Gc"/>
                     </view>
+                    <navigationItem key="navigationItem" title="New Cost Sheet" id="rvQ-IU-oDn">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="6vx-l0-fPT">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="Zj1-Q9-6XZ" id="WpD-ad-Dh5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="settingsTableView" destination="Iep-sL-mZo" id="prL-qa-hql"/>
                     </connections>
