--- a/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
@@ -139,7 +139,7 @@
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-2E-2Hg">
-                    <rect key="frame" x="0.0" y="224" width="375" height="443"/>
+                    <rect key="frame" x="0.0" y="224" width="375" height="271.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -149,19 +149,28 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVv-Mq-aOk" customClass="EntryDatePicker" customModule="Cost_Track" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="495.5" width="375" height="171.5"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="6au-o4-Src" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="7b4-g7-aPF"/>
+                <constraint firstItem="dVv-Mq-aOk" firstAttribute="top" secondItem="OcW-2E-2Hg" secondAttribute="bottom" id="BDq-z8-wTx"/>
                 <constraint firstItem="6au-o4-Src" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="Bpy-0n-wm0"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="C9n-WC-MhY"/>
+                <constraint firstItem="dVv-Mq-aOk" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="EY4-I5-ooS"/>
+                <constraint firstItem="OcW-2E-2Hg" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.45" id="FMj-6F-xxg"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="OwA-Az-iFA"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="top" secondItem="Geb-fA-wbP" secondAttribute="bottom" id="T2g-NP-XbA"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="top" secondItem="6au-o4-Src" secondAttribute="bottom" id="V22-4z-a9A"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="YM5-UK-uCc"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="ZOj-2i-urB"/>
+                <constraint firstItem="dVv-Mq-aOk" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="a6C-4L-9oY"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dVv-Mq-aOk" secondAttribute="bottom" id="ffb-72-z7n"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OcW-2E-2Hg" secondAttribute="bottom" constant="171.5" id="hZL-7K-jwb"/>
                 <constraint firstItem="6au-o4-Src" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="icA-WI-itL"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OcW-2E-2Hg" secondAttribute="bottom" id="otk-F5-w5x"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
