--- a/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="amountTextView" destination="zao-BM-Sjp" id="q80-Nw-yRT"/>
                 <outlet property="dateLabel" destination="tfy-YN-Muo" id="K3W-ad-7P1"/>
                 <outlet property="descriptionTextView" destination="OcW-2E-2Hg" id="EbO-99-0A2"/>
+                <outlet property="entryCategoryPicker" destination="Qvf-8Y-Tff" id="65F-2B-MuN"/>
                 <outlet property="entryDatePicker" destination="dVv-Mq-aOk" id="oTH-ZZ-FFt"/>
                 <outlet property="timeLabel" destination="RWa-3S-V8V" id="5ke-E4-t1D"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -181,6 +182,10 @@
                     <rect key="frame" x="0.0" y="495.5" width="375" height="171.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qvf-8Y-Tff" customClass="EntryCategoryPicker" customModule="Cost_Track" customModuleProvider="target">
+                    <rect key="frame" x="-0.5" y="495.5" width="375" height="171.5"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -190,6 +195,8 @@
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="C9n-WC-MhY"/>
                 <constraint firstItem="dVv-Mq-aOk" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="EY4-I5-ooS"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.45" id="FMj-6F-xxg"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Qvf-8Y-Tff" secondAttribute="bottom" id="LmD-rm-0oG"/>
+                <constraint firstItem="Qvf-8Y-Tff" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="MjC-t0-Jw5"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="OwA-Az-iFA"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="top" secondItem="Geb-fA-wbP" secondAttribute="bottom" id="T2g-NP-XbA"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="top" secondItem="6au-o4-Src" secondAttribute="bottom" id="V22-4z-a9A"/>
@@ -199,6 +206,8 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dVv-Mq-aOk" secondAttribute="bottom" id="ffb-72-z7n"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OcW-2E-2Hg" secondAttribute="bottom" constant="171.5" id="hZL-7K-jwb"/>
                 <constraint firstItem="6au-o4-Src" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="icA-WI-itL"/>
+                <constraint firstItem="Qvf-8Y-Tff" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="q0Q-kJ-k21"/>
+                <constraint firstItem="Qvf-8Y-Tff" firstAttribute="top" secondItem="OcW-2E-2Hg" secondAttribute="bottom" id="xLN-RM-69P"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
